--- a/index.html
+++ b/index.html
@@ -1,163 +1,139 @@
 <!DOCTYPE html>
 <html lang="ca">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Margalida Ferriol Torres - Desenvolupadora Frontend</title>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <script defer src="script.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Margalida Ferriol Torres · Desenvolupadora Frontend</title>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+  <script defer src="script.js"></script>
 </head>
 <body>
-    <header class="hero" id="home">
-        <div class="container header-flex">
-            <div class="intro" data-aos="fade-right">
-                <h1>Hola! Sóc <span>Margalida Ferriol Torres</span></h1>
-                <p>Desenvolupadora Frontend | Apassionada per la tecnologia, el disseny i el treball en equip.</p>
-                <div class="social-links">
-                    <a href="https://github.com/maargaafeerriiool" target="_blank"><i class="fab fa-github"></i></a>
-                    <a href="https://www.linkedin.com/in/margalida-ferriol-torres/" target="_blank"><i class="fab fa-linkedin"></i></a>
-                    <a href="mailto:mferrioltorres@gmail.com"><i class="fas fa-envelope"></i></a>
-                </div>
-                <a href="#contacte" class="btn-primary">Contacta amb mi</a>
-            </div>
-            <img src="margalida.png" alt="Margalida Ferriol Torres" class="profile-img" data-aos="fade-left">
+  <nav class="navbar">
+    <div class="container">
+      <h1 class="logo">Margalida Ferriol</h1>
+      <ul>
+        <li><a href="#about">Sobre mi</a></li>
+        <li><a href="#skills">Habilitats</a></li>
+        <li><a href="#projects">Projectes</a></li>
+        <li><a href="#experience">Experiència</a></li>
+        <li><a href="#education">Formació</a></li>
+        <li><a href="#contact">Contacte</a></li>
+      </ul>
+    </div>
+  </nav>
+
+  <header class="hero" id="home">
+    <div class="container hero-content">
+      <div class="hero-text" data-aos="fade-right">
+        <h2>Hola! Sóc</h2>
+        <h1>Margalida Ferriol Torres</h1>
+        <p>Desenvolupadora frontend apassionada per la tecnologia i la creativitat</p>
+        <div class="social-links">
+          <a href="https://github.com/maargaafeerriiool" target="_blank"><i class="fab fa-github"></i></a>
+          <a href="https://linkedin.com/in/margalida-ferriol-torres" target="_blank"><i class="fab fa-linkedin"></i></a>
+          <a href="mailto:mferrioltorres@gmail.com"><i class="fas fa-envelope"></i></a>
         </div>
-    </header>
+        <a href="#contact" class="btn-primary">Contacta amb mi</a>
+      </div>
+      <div class="hero-img" data-aos="fade-left">
+        <img src="margalida.png" alt="Margalida Ferriol Torres">
+      </div>
+    </div>
+  </header>
 
-    <nav class="navbar">
-        <ul>
-            <li><a href="#about">Sobre mi</a></li>
-            <li><a href="#skills">Habilitats</a></li>
-            <li><a href="#experience">Experiència</a></li>
-            <li><a href="#education">Formació</a></li>
-            <li><a href="#projects">Projectes</a></li>
-            <li><a href="#contacte">Contacte</a></li>
-        </ul>
-    </nav>
+  <main class="container">
+    <section id="about" class="section" data-aos="fade-up">
+      <h2>Sobre mi</h2>
+      <p>Estudiant de DAM a Prat Educació amb experiència en desenvolupament frontend i passió per construir interfícies modernes, útils i accessibles. M'agrada col·laborar, innovar i aplicar bones pràctiques de codi.</p>
+    </section>
 
-    <main class="container">
-        <section id="about" data-aos="fade-up">
-            <h2>Sobre mi</h2>
-            <p>Sóc estudiant de DAM a Prat Educació i apassionada per la tecnologia. M'encanta construir aplicacions útils i creatives amb un toc de disseny, sempre buscant millorar l'experiència d'usuari i col·laborar en projectes socials.</p>
-            <ul class="tags">
-                <li>🌍 Artà, Mallorca</li>
-                <li>💬 Català, Castellà, Anglès (B2)</li>
-                <li>📚 Creativitat · Empatia · Pensament Crític</li>
-            </ul>
-        </section>
+    <section id="skills" class="section" data-aos="fade-up">
+      <h2>Habilitats</h2>
+      <div class="skills-grid">
+        <div>
+          <h3>🌐 Frontend</h3>
+          <ul><li>HTML</li><li>CSS</li><li>JavaScript</li><li>React</li><li>Tailwind</li></ul>
+        </div>
+        <div>
+          <h3>💻 Backend i dades</h3>
+          <ul><li>Java</li><li>MySQL</li><li>Firebase</li><li>Python</li><li>XML</li></ul>
+        </div>
+        <div>
+          <h3>🛠️ Eines</h3>
+          <ul><li>Git</li><li>GitHub</li><li>Overleaf</li><li>Docker</li><li>Webpack</li></ul>
+        </div>
+        <div>
+          <h3>🚀 Metodologies</h3>
+          <ul><li>Agile</li><li>SCRUM</li><li>Organització</li><li>Planificació</li></ul>
+        </div>
+      </div>
+    </section>
 
-        <section id="skills" data-aos="fade-up">
-            <h2>Habilitats i Tecnologies</h2>
-            <div class="skills-categories">
-                <div class="category">
-                    <h3>🌐 Frontend</h3>
-                    <ul class="skill-tags">
-                        <li>HTML</li><li>CSS</li><li>JavaScript</li><li>React</li><li>Responsive</li><li>Tailwind</li>
-                    </ul>
-                </div>
-                <div class="category">
-                    <h3>⚙️ Backend & Dades</h3>
-                    <ul class="skill-tags">
-                        <li>Java</li><li>MySQL</li><li>Firebase</li><li>Python</li><li>XML</li>
-                    </ul>
-                </div>
-                <div class="category">
-                    <h3>🛠️ Eines</h3>
-                    <ul class="skill-tags">
-                        <li>Git</li><li>GitHub</li><li>Overleaf</li><li>Docker</li><li>Webpack</li>
-                    </ul>
-                </div>
-                <div class="category">
-                    <h3>🚀 Metodologies</h3>
-                    <ul class="skill-tags">
-                        <li>Agile</li><li>SCRUM</li><li>Organització</li><li>Planificació</li>
-                    </ul>
-                </div>
-            </div>
-        </section>
+    <section id="projects" class="section" data-aos="fade-up">
+      <h2>Projectes</h2>
+      <div class="projects-grid">
+        <div class="project-card">
+          <h3>Portfolio Web</h3>
+          <p>Web personal desenvolupada amb HTML, CSS i JS per mostrar el meu perfil professional.</p>
+          <a href="#">Veure projecte</a>
+        </div>
+        <div class="project-card">
+          <h3>Ecommerce de Mostres</h3>
+          <p>Mostrari de productes amb React i Firebase per a una empresa de ferro.</p>
+          <a href="#">Veure projecte</a>
+        </div>
+      </div>
+    </section>
 
-        <section id="experience" data-aos="fade-up">
-            <h2>Experiència</h2>
-            <div class="timeline">
-                <div class="timeline-item">
-                    <h3>Desenvolupadora Frontend · Firechip</h3>
-                    <span>Nov 2024 - Abr 2025</span>
-                    <p>Creació d’interfícies React, integració GraphQL, desenvolupament de PWA i aplicacions per IoT.</p>
-                </div>
-                <div class="timeline-item">
-                    <h3>Monitora en pràctiques · Eix Estels</h3>
-                    <span>Juliol 2024</span>
-                    <p>Organització d'activitats infantils, adaptades a necessitats especials.</p>
-                </div>
-                <div class="timeline-item">
-                    <h3>Autònoma · Fet de Ferro</h3>
-                    <span>Juny - Set 2024</span>
-                    <p>Facturació, arxiu i atenció al client en una empresa artesanal.</p>
-                </div>
-                <div class="timeline-item">
-                    <h3>Sindicat d'Estudiants</h3>
-                    <span>2018 - 2023</span>
-                    <p>Organització d'activitats escolars i defensa dels drets dels estudiants.</p>
-                </div>
-            </div>
-        </section>
+    <section id="experience" class="section" data-aos="fade-up">
+      <h2>Experiència</h2>
+      <div class="timeline">
+        <div class="timeline-item">
+          <h3>Frontend Developer · Firechip</h3>
+          <span>Nov 2024 - Abr 2025</span>
+          <p>Desenvolupament de sistemes de disseny amb React, GraphQL, PWA i interfícies per IoT.</p>
+        </div>
+        <div class="timeline-item">
+          <h3>Monitora · Eix Estels</h3>
+          <span>Juliol 2024</span>
+          <p>Activitats d’oci adaptades a infants amb necessitats especials.</p>
+        </div>
+        <div class="timeline-item">
+          <h3>Atenció al client · Fet de Ferro</h3>
+          <span>Juny - Setembre 2024</span>
+          <p>Facturació i tracte amb clients com a treballadora autònoma.</p>
+        </div>
+      </div>
+    </section>
 
-        <section id="education" data-aos="fade-up">
-            <h2>Formació</h2>
-            <div class="cards">
-                <div class="card">
-                    <h3>CFGS DAM · Prat Educació</h3>
-                    <span>2023 - 2025</span>
-                </div>
-                <div class="card">
-                    <h3>Batxillerat Tecnològic · IES Llorenç Garcías i Font</h3>
-                    <span>2021 - 2023</span>
-                </div>
-                <div class="card">
-                    <h3>Curs App · UAB</h3>
-                    <span>2021 - 2022</span>
-                </div>
-                <div class="card">
-                    <h3>Monitora + Vetlladora NESE</h3>
-                    <span>2024</span>
-                </div>
-            </div>
-        </section>
+    <section id="education" class="section" data-aos="fade-up">
+      <h2>Formació</h2>
+      <div class="cards">
+        <div class="card"><h3>CFGS DAM · Prat Educació</h3><span>2023 - 2025</span></div>
+        <div class="card"><h3>Batxillerat Tecnològic · IES Artà</h3><span>2021 - 2023</span></div>
+        <div class="card"><h3>Curs d'apps · UAB</h3><span>2021 - 2022</span></div>
+        <div class="card"><h3>Curs Monitora + NESE</h3><span>2024</span></div>
+      </div>
+    </section>
 
-        <section id="projects" data-aos="fade-up">
-            <h2>Projectes</h2>
-            <div class="project-gallery">
-                <div class="project-card">
-                    <h3>📱 Portfolio personal</h3>
-                    <p>Pàgina web responsive feta en HTML, CSS i JS amb interactivitat i disseny personalitzat.</p>
-                    <a href="#">Veure</a>
-                </div>
-                <div class="project-card">
-                    <h3>🛒 Ecommerce Mostrari</h3>
-                    <p>Mostrari de productes per una empresa de ferro amb React i Firebase Firestore.</p>
-                    <a href="#">Veure</a>
-                </div>
-            </div>
-        </section>
+    <section id="contact" class="section" data-aos="fade-up">
+      <h2>Contacte</h2>
+      <p>Envia'm un correu o connecta amb mi a les xarxes socials!</p>
+      <ul class="contact-list">
+        <li><i class="fas fa-envelope"></i> mferrioltorres@gmail.com</li>
+        <li><i class="fab fa-github"></i> github.com/maargaafeerriiool</li>
+        <li><i class="fab fa-linkedin"></i> linkedin.com/in/margalida-ferriol-torres</li>
+      </ul>
+    </section>
+  </main>
 
-        <section id="contacte" data-aos="fade-up">
-            <h2>Contacte</h2>
-            <p>Vols col·laborar o contactar amb mi? Pots fer-ho fàcilment:</p>
-            <ul class="contact-info">
-                <li><i class="fas fa-envelope"></i> mferrioltorres@gmail.com</li>
-                <li><i class="fab fa-linkedin"></i> linkedin.com/in/margalida-ferriol-torres</li>
-                <li><i class="fab fa-github"></i> github.com/maargaafeerriiool</li>
-            </ul>
-        </section>
-    </main>
+  <footer>
+    <p>&copy; 2025 Margalida Ferriol Torres · Tots els drets reservats</p>
+  </footer>
 
-    <footer>
-        <p>&copy; 2025 Margalida Ferriol Torres · Tots els drets reservats</p>
-    </footer>
-
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script>AOS.init();</script>
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>AOS.init();</script>
 </body>
 </html>
