--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="ca">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Margalida Ferriol Torres · Desenvolupadora Frontend</title>
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="styles.css" />
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <script defer src="script.js"></script>
 </head>
@@ -38,7 +38,7 @@
         <a href="#contact" class="btn-primary">Contacta amb mi</a>
       </div>
       <div class="hero-img" data-aos="fade-left">
-        <img src="margalida.png" alt="Margalida Ferriol Torres">
+        <img src="margalida.png" alt="Margalida Ferriol Torres" />
       </div>
     </div>
   </header>
