--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Margalida Ferriol Torres · Desenvolupadora Frontend</title>
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="styles.css" />
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <script defer src="script.js"></script>
 </head>
 <body>
@@ -25,11 +25,11 @@
   </nav>
 
   <header class="hero" id="home">
-    <div class="container hero-content">
+    <div class="hero-content">
       <div class="hero-text" data-aos="fade-right">
         <h2>Hola! Sóc</h2>
         <h1>Margalida Ferriol Torres</h1>
-        <p>Desenvolupadora frontend apassionada per la tecnologia i la creativitat</p>
+        <p>Desenvolupadora frontend apassionada per la tecnologia, la creativitat i la col·laboració. Actualment estudiant de DAM a Prat Educació.</p>
         <div class="social-links">
           <a href="https://github.com/maargaafeerriiool" target="_blank"><i class="fab fa-github"></i></a>
           <a href="https://linkedin.com/in/margalida-ferriol-torres" target="_blank"><i class="fab fa-linkedin"></i></a>
@@ -46,7 +46,7 @@
   <main class="container">
     <section id="about" class="section" data-aos="fade-up">
       <h2>Sobre mi</h2>
-      <p>Estudiant de DAM a Prat Educació amb experiència en desenvolupament frontend i passió per construir interfícies modernes, útils i accessibles. M'agrada col·laborar, innovar i aplicar bones pràctiques de codi.</p>
+      <p>Sóc una desenvolupadora en formació que gaudeix resolent reptes i creant aplicacions útils. M’apassiona el disseny d’interfícies, la tecnologia web i l’aprenentatge continu. He col·laborat en projectes socials, com a monitora i com a membre actiu del sindicat d’estudiants del meu institut.</p>
     </section>
 
     <section id="skills" class="section" data-aos="fade-up">
@@ -54,19 +54,19 @@
       <div class="skills-grid">
         <div>
           <h3>🌐 Frontend</h3>
-          <ul><li>HTML</li><li>CSS</li><li>JavaScript</li><li>React</li><li>Tailwind</li></ul>
+          <ul><li>HTML5</li><li>CSS3</li><li>JavaScript</li><li>React</li><li>Tailwind CSS</li></ul>
         </div>
         <div>
-          <h3>💻 Backend i dades</h3>
-          <ul><li>Java</li><li>MySQL</li><li>Firebase</li><li>Python</li><li>XML</li></ul>
+          <h3>💻 Backend i Dades</h3>
+          <ul><li>Java</li><li>Firebase</li><li>MySQL</li><li>Python</li><li>XML</li></ul>
         </div>
         <div>
-          <h3>🛠️ Eines</h3>
-          <ul><li>Git</li><li>GitHub</li><li>Overleaf</li><li>Docker</li><li>Webpack</li></ul>
+          <h3>🧰 Eines i Frameworks</h3>
+          <ul><li>Git & GitHub</li><li>Overleaf</li><li>Docker</li><li>Webpack</li></ul>
         </div>
         <div>
-          <h3>🚀 Metodologies</h3>
-          <ul><li>Agile</li><li>SCRUM</li><li>Organització</li><li>Planificació</li></ul>
+          <h3>🚀 Metodologies i Pràctiques</h3>
+          <ul><li>SCRUM</li><li>Agile</li><li>Responsive Design</li><li>Multiplataforma</li></ul>
         </div>
       </div>
     </section>
@@ -75,13 +75,18 @@
       <h2>Projectes</h2>
       <div class="projects-grid">
         <div class="project-card">
-          <h3>Portfolio Web</h3>
-          <p>Web personal desenvolupada amb HTML, CSS i JS per mostrar el meu perfil professional.</p>
+          <h3>🌟 Portfolio Web</h3>
+          <p>Web personal feta amb HTML, CSS i JS, amb disseny adaptat a dispositius mòbils i estil propi.</p>
           <a href="#">Veure projecte</a>
         </div>
         <div class="project-card">
-          <h3>Ecommerce de Mostres</h3>
-          <p>Mostrari de productes amb React i Firebase per a una empresa de ferro.</p>
+          <h3>🛒 Ecommerce de Mostres</h3>
+          <p>Aplicació amb React i Firebase per mostrar productes d’una empresa de construcció de ferro.</p>
+          <a href="#">Veure projecte</a>
+        </div>
+        <div class="project-card">
+          <h3>📱 App Android amb Firebase</h3>
+          <p>Aplicació creada durant un curs d’estiu a la UAB amb autenticació i base de dades a temps real.</p>
           <a href="#">Veure projecte</a>
         </div>
       </div>
@@ -93,17 +98,17 @@
         <div class="timeline-item">
           <h3>Frontend Developer · Firechip</h3>
           <span>Nov 2024 - Abr 2025</span>
-          <p>Desenvolupament de sistemes de disseny amb React, GraphQL, PWA i interfícies per IoT.</p>
+          <p>Desenvolupament de sistemes de disseny amb React, integració de GraphQL i creació de PWA accessibles.</p>
         </div>
         <div class="timeline-item">
-          <h3>Monitora · Eix Estels</h3>
+          <h3>Monitora de Lleure · Eix Estels</h3>
           <span>Juliol 2024</span>
-          <p>Activitats d’oci adaptades a infants amb necessitats especials.</p>
+          <p>Coordinació d’activitats educatives amb infants, incloent alumnes amb NESE.</p>
         </div>
         <div class="timeline-item">
-          <h3>Atenció al client · Fet de Ferro</h3>
-          <span>Juny - Setembre 2024</span>
-          <p>Facturació i tracte amb clients com a treballadora autònoma.</p>
+          <h3>Representant d’Estudiants · IES Artà</h3>
+          <span>2018 - 2023</span>
+          <p>Participació en assemblees, defensa de drets estudiantils i promoció d’esdeveniments formatius.</p>
         </div>
       </div>
     </section>
@@ -112,15 +117,15 @@
       <h2>Formació</h2>
       <div class="cards">
         <div class="card"><h3>CFGS DAM · Prat Educació</h3><span>2023 - 2025</span></div>
-        <div class="card"><h3>Batxillerat Tecnològic · IES Artà</h3><span>2021 - 2023</span></div>
-        <div class="card"><h3>Curs d'apps · UAB</h3><span>2021 - 2022</span></div>
-        <div class="card"><h3>Curs Monitora + NESE</h3><span>2024</span></div>
+        <div class="card"><h3>Batxillerat Tecnològic · IES Llorenç Garcías i Font</h3><span>2021 - 2023</span></div>
+        <div class="card"><h3>Curs d’Aplicacions amb Firebase · UAB</h3><span>2022</span></div>
+        <div class="card"><h3>Galops 1 i 2 · Esports Eqüestres</h3><span>2017</span></div>
       </div>
     </section>
 
     <section id="contact" class="section" data-aos="fade-up">
       <h2>Contacte</h2>
-      <p>Envia'm un correu o connecta amb mi a les xarxes socials!</p>
+      <p>Vols col·laborar amb mi o tens alguna proposta? Escriu-me!</p>
       <ul class="contact-list">
         <li><i class="fas fa-envelope"></i> mferrioltorres@gmail.com</li>
         <li><i class="fab fa-github"></i> github.com/maargaafeerriiool</li>
