--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- Navegació -->
   <nav class="navbar">
     <div class="container">
-      <h1 class="logo">Margalida Ferriol</h1>
+      <h1 class="logo">Margalida Ferriol Torres</h1>
       <ul>
         <li><a href="#about">Sobre mi</a></li>
         <li><a href="#skills">Habilitats</a></li>
