--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <a href="#contact" class="btn-primary">Contacta amb mi</a>
       </div>
       <div class="hero-img" data-aos="fade-left">
-        <img src="assets/margalida.png" alt="Margalida Ferriol Torres" />
+        <img src="margalida.png" alt="Margalida Ferriol Torres" />
       </div>
     </div>
   </header>
