--- a/index.html
+++ b/index.html
@@ -1,52 +1,52 @@
 <!DOCTYPE html>
 <html lang="ca">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Margalida Ferriol Torres · Desenvolupadora Frontend</title>
-  <link rel="stylesheet" href="styles.css" />
-  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-  <script defer src="script.js"></script>
-</head>
-<body>
-  <!-- Navegació -->
-  <nav class="navbar">
-    <div class="container">
-      <h1 class="logo">Margalida Ferriol Torres</h1>
-      <ul>
-        <li><a href="#about">Sobre mi</a></li>
-        <li><a href="#skills">Habilitats</a></li>
-        <li><a href="#projects">Projectes</a></li>
-        <li><a href="#experience">Experiència</a></li>
-        <li><a href="#education">Formació</a></li>
-        <li><a href="#certificats">Certificats</a></li>
-        <li><a href="#aficions">Aficions</a></li>
-        <li><a href="#idiomes">Idiomes</a></li>
-        <li><a href="#contact">Contacte</a></li>
-      </ul>
-    </div>
-  </nav>
-
-  <!-- Hero -->
-  <header class="hero" id="home">
-    <div class="hero-content">
-      <div class="hero-text" data-aos="fade-right">
-        <h2>Hola! Sóc</h2>
-        <h1>Margalida Ferriol Torres</h1>
-        <p>Desenvolupadora frontend apassionada per la tecnologia, la creativitat i la col·laboració.</p>
-        <div class="social-links">
-          <a href="https://github.com/maargaafeerriiool" target="_blank"><i class="fab fa-github"></i></a>
-          <a href="https://linkedin.com/in/margalida-ferriol-torres" target="_blank"><i class="fab fa-linkedin"></i></a>
-          <a href="mailto:mferrioltorres@gmail.com"><i class="fas fa-envelope"></i></a>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Margalida Ferriol Torres · Desenvolupadora Frontend</title>
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <script defer src="script.js"></script>
+  </head>
+  <body>
+    <!-- Navegació -->
+    <nav class="navbar">
+      <div class="container">
+        <h1 class="logo">Margalida Ferriol Torres</h1>
+        <ul>
+          <li><a href="#about">Sobre mi</a></li>
+          <li><a href="#skills">Habilitats</a></li>
+          <li><a href="#projects">Projectes</a></li>
+          <li><a href="#experience">Experiència</a></li>
+          <li><a href="#education">Formació</a></li>
+          <li><a href="#certificats">Certificats</a></li>
+          <li><a href="#aficions">Aficions</a></li>
+          <li><a href="#idiomes">Idiomes</a></li>
+          <li><a href="#contact">Contacte</a></li>
+        </ul>
+      </div>
+    </nav>
+  
+    <!-- Hero -->
+    <header class="hero" id="home">
+      <div class="hero-content">
+        <div class="hero-text" data-aos="fade-right">
+          <h2>Hola! Sóc</h2>
+          <h1>Margalida Ferriol Torres</h1>
+          <p>Desenvolupadora frontend apassionada per la tecnologia, la creativitat i la col·laboració.</p>
+          <div class="social-links">
+            <a href="https://github.com/maargaafeerriiool" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="https://linkedin.com/in/margalida-ferriol-torres" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="mailto:mferrioltorres@gmail.com"><i class="fas fa-envelope"></i></a>
+          </div>
+          <a href="#contact" class="btn-primary">Contacta amb mi</a>
         </div>
-        <a href="#contact" class="btn-primary">Contacta amb mi</a>
+        <div class="hero-img" data-aos="fade-left">
+          <img src="assets/margalida.png" alt="Margalida Ferriol Torres" />
+        </div>
       </div>
-      <div class="hero-img" data-aos="fade-left">
-        <img src="margalida.png" alt="Margalida Ferriol Torres" />
-      </div>
-    </div>
-  </header>
+    </header>
 
   <main class="container">
     <!-- Sobre mi -->
